--- a/Dummy.QueueProcessor/Dummy.QueueProcessor.csproj
+++ b/Dummy.QueueProcessor/Dummy.QueueProcessor.csproj
@@ -2,8 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+	
+  <ItemGroup>
+	  <PackageReference Include="MassTransit" Version="8.2.2" />
+	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
+  </ItemGroup>
 
 </Project>
