Created connection with databases using context classes

--- a/Dummy.QueueProcessor/appsettings.json
+++ b/Dummy.QueueProcessor/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DummyCommandConnection": "Data Source=DESKTOP-ETJT1M5;Initial Catalog=dummy_command_base;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "DummyQueryConnection": "Data Source=DESKTOP-ETJT1M5;Initial Catalog=dummy_query_base;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
