--- a/Dummy.QueueProcessor/Dummy.QueueProcessor.csproj
+++ b/Dummy.QueueProcessor/Dummy.QueueProcessor.csproj
@@ -10,5 +10,9 @@
 	  <PackageReference Include="MassTransit" Version="8.2.2" />
 	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.2" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\Dummy.Persistence\Dummy.Persistence.csproj" />
+  </ItemGroup>
 
 </Project>
