--- a/Dummy.Persistence/Dummy.Persistence.csproj
+++ b/Dummy.Persistence/Dummy.Persistence.csproj
@@ -10,4 +10,8 @@
   	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
   	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dummy.Core\Dummy.Core.csproj" />
+  </ItemGroup>
 </Project>
